# mpt-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  refactor_proposal.md  requirements.txt  sonar-project.properties
.github/workflows/: deploy-agent.yml  deploy.yml  test.yml
alembic/: README  env.py
alembic/versions/: 8ec0bd357032_initial_analytics_schema.py  fade13bb84ae_add_client_ip_column.py
config/: env.example
docs/: CUSTOM_DOMAIN.md  GITHUB_ACTIONS_SETUP.md
examples/: README.md  claude_desktop_stdio.json  claude_desktop_stdio_docker.json  curl_example.sh  cursor_http.json  python_client_example.py  vscode_copilot_mcp.json
scripts/: README.md
src/: __init__.py  api_client.py  audit_fields.py  cache_manager.py  config.py  documentation_cache.py  endpoint_registry.py  gitbook_client.py  mcp_tools.py  models.py  openapi_parser.py  query_templates.py  server.py  server_context.py  server_docs.py  server_middleware.py  server_resources.py  server_stdio.py  server_tools.py  token_validator.py
src/analytics/: __init__.py  logger.py  models.py
tests/: test_api_client_normalization.py  test_api_client_token_handling.py  test_audit_field_auto_detection.py  test_default_limit.py  test_docs_cache_wiring.py  test_docs_tools_and_resources.py  test_documentation_tools.py.skip  test_documentation_tools.py.todo  test_endpoint_validation.py  test_error_handling.py  test_gitbook_integration.py  test_headers.py  test_http_server.py  test_middleware.py.todo  test_models.py  test_omitted_fields.py  test_openapi_resource.py  test_openapi_resource.py.todo  test_path_params.py  test_query_templates.py  test_rql.py  test_select_sanitization.py  test_server_middleware.py  test_stdio_server.py  test_token_validator.py  test_ux_improvements.py
