[project]
name = "mpt-mcp"
version = "0.1.0"
description = "Multi-tenant MCP server for the SoftwareOne Marketplace API (stdio + HTTP streamable)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.0.0b2",  # 3.0 line (3.0.0 final not on PyPI yet; upgrade to >=3.0.0 when released)
    "httpx[http2]>=0.25.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
    "sse-starlette>=1.8.0",
    # Analytics
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-ruff>=0.2.0",
    "ruff>=0.14.0",
]

[tool.ruff]
# Python version
target-version = "py314"

# Line length
line-length = 180

# Enable specific rule sets
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
]

# Ignore specific rules
lint.ignore = [
    "UP017", # the alias on UTC, gives me problems in python 3.12
    "PTH",    # flake8-use-pathlib - would require extensive refactoring
    "SIM102", # Use a single if statement instead of nested if statements
    "SIM108", # Use ternary operator instead of if-else-block
    "B904",   # Raise from within except - we intentionally create new exceptions
]

# Exclude directories
extend-exclude = [
    "__pycache__",
    "*.pyc",
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    "venv",
    "env",
    ".env",
    "build",
    "dist",
]

# Allow autofix for all enabled rules
lint.fixable = ["ALL"]
lint.unfixable = []

# Allow unused variables when underscore-prefixed
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Test files can have more flexible rules
"tests/**/*.py" = [
    "N802",  # Function name should be lowercase (test methods can use mixed case)
    "N806",  # Variable in function should be lowercase (test fixtures can use mixed case)
    "SIM",   # Simplify rules (tests can be verbose for clarity)
]

[tool.ruff.lint.isort]
# Import sorting configuration
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["src"]

[tool.ruff.format]
# Use double quotes
quote-style = "double"

# Indent with 4 spaces
indent-style = "space"

# Unix line endings
line-ending = "lf"

# Format docstrings
docstring-code-format = true

# Pytest configuration is in pytest.ini (pytest.ini takes precedence)
# This section is kept for reference but pytest.ini is used
